--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,3 @@
-@font-face{
-  font-family: 'Symbah-Regular';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./reyotearriendo/fonts/Symbah-Regular.otf') format('opentype')
-}
-
-@font-face{
-  font-family: 'HelveticaNeue-Roman';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./reyotearriendo/fonts/HelveticaNeue-Roman.otf') format('opentype')
-}
-
-@font-face{
-  font-family: 'Gotham-Thin';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./reyotearriendo/fonts/Gotham-Thin.otf') format('opentype')
-}
-
 html {
   margin: 0;
   padding: 0;
@@ -28,7 +7,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: #bfbfbf url('./img/med.jpg') no-repeat fixed center;
+  background: #bfbfbf;
   width: 100%;
   height: 100%;
 }
